Added support for dimensions